syntax = "proto3";
package utility;
option go_package = "/utility/test/";

message UnstakingActor {
  bytes Address = 1;
  string StakeAmount = 2;
  bytes OutputAddress = 3;
}

message UnstakingActors {
  repeated UnstakingActor UnstakingActors = 1;
}